--- a/DataLibrary/DataLibrary.csproj
+++ b/DataLibrary/DataLibrary.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="Dapper" Version="1.60.6" />
-    <PackageReference Include="MySql.Data.Entity" Version="6.9.8" />
+    <PackageReference Include="MySql.Data" Version="8.0.15" />
+    <PackageReference Include="MySql.Data.Entity" Version="6.10.8" />
   </ItemGroup>
 
 </Project>
