--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Resources\notfound.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LitJson" Version="0.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.Internal" Version="2.2.0" />
